--- a/src/renderer/assets/scss/global.scss
+++ b/src/renderer/assets/scss/global.scss
@@ -6,3 +6,14 @@ body {
 body {
   margin: 0;
 }
+ul,
+li {
+  margin: 0;
+  padding: 0;
+}
+li {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
