--- a/src/renderer/assets/scss/global.scss
+++ b/src/renderer/assets/scss/global.scss
@@ -1,13 +1,20 @@
-$brand-primary: blue;
 html,
 body {
   height: 100%;
 }
 body {
   margin: 0;
+  font-family: 'Microsoft YaHei';
 }
 ul,
-li {
+li,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
   margin: 0;
   padding: 0;
 }
